feat: update chrome extention

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -160,8 +160,8 @@
   
   <div id="connectionForm">
     <div class="form-group">
-      <label for="roomName">房間名稱：</label>
-      <input type="text" id="roomName" placeholder="輸入房間名稱">
+      <label for="roomName">房間 ID：</label>
+      <input type="text" id="roomName" placeholder="輸入房間 ID">
     </div>
     
     <div class="button-group">
@@ -193,8 +193,9 @@
   <div class="info">
     <strong>使用說明：</strong><br>
     1. 打開 Netflix 並開始播放影片<br>
-    2. 輸入房間名稱並點擊「加入房間」<br>
-    3. 與朋友分享房間名稱即可同步觀看
+    2. 輸入房間 ID 並點擊「加入房間」<br>
+    3. 與朋友分享房間 ID 即可同步觀看<br>
+    4. 或建立新房間並分享房間 ID
   </div>
   
   <script src="popup.js"></script>
